--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,8 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
 
+[/Script/Engine.Engine]
+bSmoothFrameRate=False
+bUseFixedFrameRate=False
+FixedFrameRate=10000.000000
+
